auto layout added

--- a/flixter/Base.lproj/Main.storyboard
+++ b/flixter/Base.lproj/Main.storyboard
@@ -18,9 +18,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="163" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="RwE-xf-p36">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="163" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="RwE-xf-p36">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <activityIndicatorView key="tableFooterView" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" id="BCl-l6-P0M">
                                     <rect key="frame" x="0.0" y="198" width="414" height="44"/>
@@ -29,30 +28,43 @@
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="movieCell" rowHeight="131" id="sw9-wT-2Yy" customClass="MovieTableViewCell">
                                         <rect key="frame" x="0.0" y="44.5" width="414" height="131"/>
-                                        <autoresizingMask key="autoresizingMask"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="sw9-wT-2Yy" id="YrH-9s-E8e">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="131"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bJZ-LD-ufU">
-                                                    <rect key="frame" x="37" y="2" width="142" height="128"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bJZ-LD-ufU">
+                                                    <rect key="frame" x="8" y="2" width="142" height="121"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="142" id="8Sw-aP-sDA"/>
+                                                        <constraint firstAttribute="height" constant="128" id="Y0k-eG-Zys"/>
+                                                    </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G33-Cz-Wxm">
-                                                    <rect key="frame" x="187" y="11" width="207" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G33-Cz-Wxm">
+                                                    <rect key="frame" x="158" y="2" width="244" height="23"/>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="19"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="20" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8sK-KK-QsW">
-                                                    <rect key="frame" x="187" y="34" width="218" height="91"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8sK-KK-QsW">
+                                                    <rect key="frame" x="158" y="33" width="228" height="19.5"/>
                                                     <fontDescription key="fontDescription" type="system" weight="thin" pointSize="16"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="bJZ-LD-ufU" secondAttribute="bottom" constant="8" id="3dC-6c-gDX"/>
+                                                <constraint firstItem="G33-Cz-Wxm" firstAttribute="trailing" secondItem="YrH-9s-E8e" secondAttribute="trailingMargin" constant="8" id="3jf-lC-S1k"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="8sK-KK-QsW" secondAttribute="trailing" constant="8" id="Cb3-D5-5gn"/>
+                                                <constraint firstItem="G33-Cz-Wxm" firstAttribute="leading" secondItem="bJZ-LD-ufU" secondAttribute="trailing" constant="8" id="DSb-CA-prh"/>
+                                                <constraint firstItem="8sK-KK-QsW" firstAttribute="leading" secondItem="G33-Cz-Wxm" secondAttribute="leading" id="MUa-10-VUn"/>
+                                                <constraint firstItem="G33-Cz-Wxm" firstAttribute="top" secondItem="bJZ-LD-ufU" secondAttribute="top" id="UnE-Be-qUk"/>
+                                                <constraint firstItem="bJZ-LD-ufU" firstAttribute="top" secondItem="YrH-9s-E8e" secondAttribute="top" constant="2" id="cp3-rm-16h"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="8sK-KK-QsW" secondAttribute="bottom" constant="8" id="eoU-0c-wWX"/>
+                                                <constraint firstItem="bJZ-LD-ufU" firstAttribute="leading" secondItem="YrH-9s-E8e" secondAttribute="leading" constant="8" id="go9-ij-zEX"/>
+                                                <constraint firstItem="8sK-KK-QsW" firstAttribute="top" secondItem="G33-Cz-Wxm" secondAttribute="bottom" constant="8" id="lUG-tq-dMf"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <accessibility key="accessibilityConfiguration" identifier="movieCell"/>
                                         <connections>
@@ -67,6 +79,12 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="RwE-xf-p36" secondAttribute="bottom" id="OQU-2M-bXV"/>
+                            <constraint firstItem="RwE-xf-p36" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="SDW-Rz-x7H"/>
+                            <constraint firstItem="RwE-xf-p36" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="UZ3-IL-W9N"/>
+                            <constraint firstItem="RwE-xf-p36" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="WSv-Kd-APf"/>
+                        </constraints>
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="cSK-1P-mAp"/>
