--- a/flixter/Base.lproj/Main.storyboard
+++ b/flixter/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                                 </activityIndicatorView>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="movieCell" rowHeight="131" id="sw9-wT-2Yy" customClass="MovieTableViewCell">
-                                        <rect key="frame" x="0.0" y="44.5" width="414" height="131"/>
+                                        <rect key="frame" x="0.0" y="45" width="414" height="131"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="sw9-wT-2Yy" id="YrH-9s-E8e">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="131"/>
@@ -111,20 +111,8 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="b1P-zo-bnT">
-                                        <rect key="frame" x="0.0" y="-14" width="414" height="258"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="34" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="si1-Oo-7eB">
-                                        <rect key="frame" x="28" y="314" width="338" height="238"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FJD-S1-ahy">
-                                        <rect key="frame" x="37" y="149" width="128" height="188"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="b1P-zo-bnT">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="298.5"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kXX-V5-cLI">
                                         <rect key="frame" x="173" y="263" width="176" height="22"/>
@@ -133,13 +121,33 @@
                                         <color key="textColor" name="AccentColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="34" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="si1-Oo-7eB">
+                                        <rect key="frame" x="28" y="314" width="338" height="238"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FJD-S1-ahy">
+                                        <rect key="frame" x="21" y="134" width="128" height="188"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstItem="b1P-zo-bnT" firstAttribute="trailing" secondItem="NTN-K2-fce" secondAttribute="trailing" id="GgK-pB-jRp"/>
+                                    <constraint firstItem="b1P-zo-bnT" firstAttribute="leading" secondItem="NTN-K2-fce" secondAttribute="leading" id="oYo-FN-lYK"/>
+                                    <constraint firstItem="b1P-zo-bnT" firstAttribute="top" secondItem="NTN-K2-fce" secondAttribute="top" id="uWH-cB-v2h"/>
+                                </constraints>
                                 <viewLayoutGuide key="contentLayoutGuide" id="NTN-K2-fce"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="cVg-Q7-yd3"/>
                             </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="B5Q-1W-nUs"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="b1P-zo-bnT" firstAttribute="height" secondItem="EL4-tr-Pc0" secondAttribute="height" multiplier="0.333147" id="5aM-d2-Tee"/>
+                            <constraint firstItem="b1P-zo-bnT" firstAttribute="width" secondItem="EL4-tr-Pc0" secondAttribute="width" id="LTh-Aw-Id2"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="hMr-ZK-9Qs"/>
                     <connections>
